--- a/ActivityDiagram/ActivityDiagram/ActivityDiagram.csproj
+++ b/ActivityDiagram/ActivityDiagram/ActivityDiagram.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Model\DataItem.cs" />
     <Compile Include="Model\DataService.cs" />
     <Compile Include="Model\IDataService.cs" />
+    <Compile Include="Model\Line.cs" />
     <Compile Include="Model\Triangle.cs" />
     <Compile Include="Model\Pentagon.cs" />
     <Compile Include="Model\Circle.cs" />
