--- a/ActivityDiagram/ActivityDiagram/ActivityDiagram.csproj
+++ b/ActivityDiagram/ActivityDiagram/ActivityDiagram.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Command\AddSquareCommand.cs" />
     <Compile Include="Command\AddTriangleCommand.cs" />
     <Compile Include="Command\IUndoRedoCommand.cs" />
+    <Compile Include="Command\MoveCircleCommand.cs" />
     <Compile Include="Command\UndoRedoController.cs" />
     <Compile Include="Design\DesignDataService.cs" />
     <Compile Include="Model\DataItem.cs" />
