--- a/ActivityDiagram/ActivityDiagram/ActivityDiagram.csproj
+++ b/ActivityDiagram/ActivityDiagram/ActivityDiagram.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Command\AddLineCommand.cs" />
     <Compile Include="Command\AddSquareCommand.cs" />
     <Compile Include="Command\AddTriangleCommand.cs" />
+    <Compile Include="Command\ClearCanvasCommand.cs" />
     <Compile Include="Command\IUndoRedoCommand.cs" />
     <Compile Include="Command\RemoveLinesCommand.cs" />
     <Compile Include="Command\MoveCircleCommand.cs" />
